--- a/app/views/events/competitors/_competitor_cells.html.haml
+++ b/app/views/events/competitors/_competitor_cells.html.haml
@@ -1,15 +1,13 @@
 %td.competitor-cell
   = link_to competitor.name.titleize, profile_path(competitor.profile), class: 'competitor__name'
-
   - if editable
     %span
       = edit_competitor_link(@event, competitor)
       = delete_competitor_button(@event, competitor)
+  .competitor__suit.text-gray
+    = competitor.suit.manufacturer_code
+    = competitor.suit_name
 
 %td.text-center
   %span{'data-toggle' => 'tooltip', title: competitor.country_name}
     = competitor.country_code
-
-%td.text-gray
-  = competitor.suit.manufacturer_code
-  = competitor.suit_name
