add space above suit name in competition scoreboard

--- a/app/assets/stylesheets/events/_scoreboard.scss
+++ b/app/assets/stylesheets/events/_scoreboard.scss
@@ -81,6 +81,7 @@
     font: 8px/8px $pn-semibold;
     text-transform: uppercase;
     letter-spacing: 0.8px;
+    margin-top: 2px;
   }
 
   .competitor__control {
