--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -11,6 +11,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+@import '../mixins/**/*';
 @import '../fonts/*';
 @import '../variables';
 @import '../common/**/*';
