--- a/app/assets/stylesheets/mixins/_full-screen.scss
+++ b/app/assets/stylesheets/mixins/_full-screen.scss
@@ -7,3 +7,12 @@
   top: 50px;
   bottom: 41px;
 }
+
+@mixin full-screen-container-header {
+  background: white;
+  border-bottom: rgba(0, 0, 0, 0.14) solid 1px;
+  line-height: 2;
+  font-size: 24px;
+  padding-left: 15px;
+  color: $gray-dark;
+}
