add, delete points

--- a/app/views/events/reference_points/_template.html.haml
+++ b/app/views/events/reference_points/_template.html.haml
@@ -1,2 +1,3 @@
-= form.fields_for :reference_points, Event::ReferencePoint.new(event: form.object), include_id: false, child_index: '__INDEX__' do |reference_point_form|
+- model = Event::ReferencePoint.new(event: form.object)
+= form.fields_for :reference_points, model, include_id: false, child_index: '__INDEX__' do |reference_point_form|
   = render 'events/reference_points/fields', form: reference_point_form
