--- a/app/assets/stylesheets/events/rounds/_map.scss
+++ b/app/assets/stylesheets/events/rounds/_map.scss
@@ -48,6 +48,17 @@
 
 }
 
+.round-map__reference-point {
+  font-size: 12px;
+  color: #777;
+  line-height: 22px;
+
+  & > a {
+    cursor: pointer;
+    float: right;
+  }
+}
+
 .round-competitors__direction {
   max-width: 50px;
   text-overflow: ellipsis;
