reference point assignments, auto dl placement

--- a/app/views/events/maps/_designated_lane_form.html.haml
+++ b/app/views/events/maps/_designated_lane_form.html.haml
@@ -1,5 +1,5 @@
 .designated-lane-form
-  %button.btn.btn-xs.btn-default{'data-action': 'click->events--designated-lane#toggle'}
+  %button.btn.btn-xs.btn-default{'data-target': 'events--designated-lane.button', 'data-action': 'click->events--designated-lane#toggle'}
     Designated lane
   %form.form-inline
     .form-group
