--- a/app/views/events/results/maps/_modal.html.haml
+++ b/app/views/events/results/maps/_modal.html.haml
@@ -10,7 +10,10 @@
         = event_result_presentation(@result)
 
     .modal-body
-      .container-fluid{'data-controller': 'events--result-map', 'data-url': url_for}
+      .container-fluid{'data-controller': 'events--result-map',
+                       'data-url': url_for,
+                       'data-action': 'maps_api:ready@window->events--result-map#on_maps_ready maps_api:failed@window->events--result-map#on_maps_failed_load'}
+
         = render 'events/results/header'
 
         .row
