--- a/app/views/events/rounds/maps/_round_map.html.haml
+++ b/app/views/events/rounds/maps/_round_map.html.haml
@@ -1,6 +1,7 @@
 .container-fluid.round-map{'data-controller': 'events--round-map',
                            'data-url': url_for,
-                           'data-dl-start': @event.designated_lane_start}
+                           'data-dl-start': @event.designated_lane_start,
+                           'data-action': 'maps_api:ready@window->events--round-map#on_maps_ready maps_api:failed@window->events--round-map#on_maps_failed_load'}
   .row
     .col-sm-8{'data-controller': 'events--designated-lane',
               'data-action': 'round-map:show-dl@window->events--designated-lane#show_dl'}
